- c to gtx - update swag
